@@ -3,6 +3,7 @@ added : `--` separator, stating that all following arguments are file names. Sug
 added : OpenBSD target, by Juan Francisco Cantero Hurtado
 fixed : dictBuilder using HC levels, reported by Bartosz Taudul
 fixed : legacy support from ZSTD_decompress_usingDDict(), reported by Felix Handte
+modified : removed `mem.h` dependency from `zstd.h` (experimental section)
 
 v0.7.2
 fixed : ZSTD_decompressBlock() using multiple consecutive blocks. Reported by Greg Slazinski.
